# TideQuant

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: build_hdf5_cs_db_from_bin.py  compute_cs_x_stats_from_bin.py  compute_cs_y_corr_from_bin.py  search_cs_labels_with_h5_db.py  train_cs_model.py  train_cs_model_with_h5_db.py  update_binance_history_data.py
scripts/crypto/: update_binance_history_data.py
tidequant/: __init__.py
tidequant/data/: __init__.py  cs_database.py  ops.py
tidequant/dl/: __init__.py  callback.py  dataset.py  engine.py  modules.py  ops.py  utils.py
tidequant/dl/model/: __init__.py  base.py
tidequant/dl/model/cs/: __init__.py  attention.py  gfs.py  mlp.py  mlp_weight_ic.py  preprocessor.py  wic_mlp.py
tidequant/dl/model/cs_models/: mlp.py
tidequant/engine/: __init__.py  base.py
tidequant/ml/: callback.py  engine.py  lgbm.py  utils.py
tidequant/utils/: __init__.py  conversion.py  helper.py  io.py
