[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidequant"
dynamic = ["version"]
description = "TideQuant toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "setproctitle",
    "tqdm",
    "xarray",
]

[project.optional-dependencies]
ml = [
    "accelerate",
    "ray",
    "torch>=2.9.0",
    "transformers",
]

[tool.setuptools]
packages = ["tidequant"]

[tool.setuptools.dynamic]
version = { attr = "tidequant.__version__" }
