[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidequant"
dynamic = ["version"]
description = "TideQuant toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "setproctitle",
    "tqdm",
    "xarray",
]

[project.optional-dependencies]
dl = [
    "accelerate",
    "ray",
    "torch>=2.9.0",
    "transformers",
]

ml = [
  "lightgbm",
  "sklearn",
]

[tool.setuptools]
packages = ["tidequant"]

[tool.setuptools.dynamic]
version = { attr = "tidequant.__version__" }
